<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_bar_retry_failed"
        android:title="@string/menu_retry_failed"
        android:visible="false"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/action_bar_toggle_all"
        android:title="@string/menu_turn_off_all"
        android:visible="false"
        app:showAsAction="never"
        />
    <!-- Opens a small two-row menu (Settings, Destinations) instead of
         navigating straight to Settings; see MainActivity.showHamburgerMenu. -->
    <item
        android:id="@+id/action_bar_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu_hamburger"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_bar_syslogs"
        android:title="@string/menu_syslog"
        app:showAsAction="never"
        />
</menu>
