<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false">

    <LinearLayout
        android:id="@+id/dialog_rocketchat_setup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingLeft="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium"
        android:paddingRight="@dimen/spacing_medium"
        android:paddingBottom="@dimen/spacing_medium">

        <TextView
            style="@style/AppTheme.HelperText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rocketchat_setup_info" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/label_rocketchat_server_url"
            app:helperText="@string/rocketchat_server_url_recommendation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_rc_server_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/label_rocketchat_user_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_rc_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/label_rocketchat_token"
            app:helperText="@string/rocketchat_token_recommendation"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_rc_token"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/label_rocketchat_target"
            app:helperText="@string/rocketchat_target_recommendation">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_rc_target"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</ScrollView>
